# Fastapi_Evaluations

Weekly_Assignment_8/: .gitignore  pyproject.toml
Weekly_Assignment_8/ml_deployment/: fastapi_application.py
Weekly_Assignment_8/ml_deployment/config/v1/: database_config.py
Weekly_Assignment_8/ml_deployment/datafiles/: scaler_file.pkl  svc_model_file.pkl
Weekly_Assignment_8/ml_deployment/models/: mongo_data.py  pydantic_models.py
Weekly_Assignment_8/ml_deployment/utils/v1/: file_loader.py
Weekly_Assignment_8/notebooks/: eda.ipynb  modal.ipynb
